[package]
name = "ytd"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.32"
itertools = "0.14.0"
rand = { version = "0.10.0", features = ["std"]}
reqwest = { version = "0.13.2", features = ["stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
